--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "axz",
-  "version": "0.3b",
-  "description": "Discord App bot",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Kruptixx",
-  "license": "MIT",
-  "dependencies": {
-    "discord.js": "^11.0.0"
-  }
+    "name": "axz",
+    "version": "0.4b",
+    "description": "Discord App bot",
+    "main": "./main.js",
+    "keywords": [
+        "bot",
+        "parser",
+        "discord"
+    ],
+    "engines": {
+        "node": "^7.9.0"
+    },
+    "author": "Max \"Kruptixx\" <zexqmap@gmail.com>",
+    "license": "MIT",
+    "dependencies": {
+        "discord.js": "^11.0.0",
+        "request"   : "^2.81.0",
+        "cheerio"   : "^0.22.0"
+    },
+    "scripts": {
+        "test": "echo test"
+    }
 }
