--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "request": "^2.81.0"
   },
   "scripts": {
-    "start": "node main",
+    "start": "nodemon main",
     "lint": "./node_modules/.bin/semistandard",
     "lint-fix": "./node_modules/.bin/semistandard --fix"
   },
   "devDependencies": {
+    "nodemon": "^1.11.0",
     "semistandard": "^11.0.0"
   },
   "repository": "https://github.com/Kruptixx/axz.git"
