--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "author": "Max \"Kruptixx\" <zexqmap@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "cheerio": "^0.22.0",
-    "discord.js": "^11.0.0",
-    "request": "^2.81.0"
+    "axios": "^0.16.2",
+    "discord.js": "^11.0.0"
   },
   "scripts": {
     "start": "nodemon main",
-    "test": "./node_modules/.bin/jest",
-    "lint": "./node_modules/.bin/semistandard --env jest",
-    "lint-fix": "./node_modules/.bin/semistandard --fix --env jest"
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "lint": "semistandard --env jest",
+    "lint-fix": "semistandard --fix --env jest"
   },
   "devDependencies": {
     "jest": "^20.0.4",
