--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axz",
-  "version": "0.4b",
+  "version": "0.4.2b",
   "description": "Discord App bot",
   "main": "./main.js",
   "keywords": [
@@ -14,12 +14,11 @@
   "author": "Max \"Kruptixx\" <zexqmap@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "cheerio": "^0.22.0",
-    "discord.js": "^11.0.0",
-    "request": "^2.81.0"
+    "discord.js": "^11.0.0"
   },
   "scripts": {
-    "start": "nodemon main",
+    "start": "node main",
+    "startmon": "nodemon main",
     "test": "./node_modules/.bin/jest",
     "lint": "./node_modules/.bin/semistandard --env jest",
     "lint-fix": "./node_modules/.bin/semistandard --fix --env jest"
