--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.2",
-    "discord.js": "^11.0.0"
+    "discord.js": "^11.0.0",
+    "winston": "^2.3.1",
+    "winston-daily-rotate-file": "^1.4.6"
   },
   "scripts": {
     "start": "node main",
-    "startmon": "nodemon main",
+    "dev": "NODE_ENV='development' nodemon main",
     "test": "jest",
     "coverage": "jest --coverage",
     "lint": "semistandard --env jest",
